refactor: Separate BoardDto and BoardRespons